# pavai-c3po

./: .gitignore  LICENSE  README.md  audioname  build_projects.sh  env.shared  env_config  first_time_setup.sh  pyproject.toml  requirements.txt  talkie_cli.sh  vocei.py  vocie_app.sh  vocie_fastapp.sh  vocie_gradioapp.sh  workspace.toml
bases/pavai/finetune_api/: __init__.py  core.py
bases/pavai/talkie_cli/: __init__.py  talkie_app.py  talkie_solar_app.py
bases/pavai/vocei_web/: __init__.py  __vocei_solar_appx_py  chatbot_speaker_ui.py  chatprompt.py  scratchpad_ui.py  system_settings_ui.py  translator_ui.py  vocei_aio_app.old  vocei_aio_app.py  vocei_aio_app_new.bak  vocei_aio_app_new.py  vocei_aio_app_old.py  vocei_app.py  vocei_fast.py  vocei_gradio_app.py  vocie_solar.sh  voice_editor_ui.py  voice_prompt_ui.py
bases/pavai/vocei_web/_delete/: xchatbot_speaker_ui.py  xvoice_prompt_ui copy.py
components/pavai/chatcommand/: __init__.py
components/pavai/finetune/: __init__.py  db_storage.py  job_data.py  job_queue.py
components/pavai/finetune/worker/: __init__.py  fetch_worker_runner.py  fetch_worker_runner_start.py  processing_worker_runner.py  processing_worker_runner_start.py
components/pavai/functions/: talkiellm.py
components/pavai/functions/functionary/: schema.py
components/pavai/functions/ollama/: currency_exchange.py  haversine.py  setup.txt  stock_symbol_no_patch.py  stock_symbol_patch.py
components/pavai/helloworld/: __init__.py  core.py
components/pavai/llmone/: chatprompt.py  datasecurity.py  llmdatasecurity.py  llmproxy.py  llmtokens.py
components/pavai/llmone/local/: chatllamacpp.py  localllm.py
components/pavai/llmone/remote/: chatbotllm.py  chatmodels.py  chatollama.py  chatopenai.py
components/pavai/llmone/solar/: llmchat.py  llmclassify.py  llmcognitive.py  llmcontentguard.py  llmfunctionary.py  llmprompt.py  (+1 more)
components/pavai/setup/: config.py  logutil.py  versions.py
components/pavai/shared/: commands.py  datasecurity.py  fileutil.py  grammar.py  handfree.py  handfree_aio.py  handfree_solar.old  hf_utils.py  llmcatalog.py  llmdatasecurity.py  llmproxy.py  load_config.old  system_checks.py  system_types.py  xlive_logconfig.py  xlive_stream.py  xlive_styletts2_demo1.py  xlive_weather.py
components/pavai/solar/: __init__.py
components/pavai/translator/: filedata.py  multilingual.py  translator.py  xtranslator_ui.old
development/: jupyterlab.sh
development/rabbitmq_prototyping/: 01_fake_data.ipynb  02_queue_worker.ipynb  03_queue_send_job_sender.ipynb  03_queue_worker_1_fetcher.ipynb  03_queue_worker_2_processor.ipynb  04_data_processing.ipynb  05_database_check.ipynb  06_module_test.ipynb  horoscope.ipynb  horoscope_data.json  training_data.jsonl
development/rabbitmq_prototyping/infrastructure/: development.yml  local.yml
development/whisper_experiment/: Speech_Interaction_transcribe_evaluation.ipynb
docs/: installation.md
infrastructure/: os_install.sh
infrastructure/finetune/: development.yml  docker_dev_down.sh  docker_dev_up.sh  local.yml
infrastructure/llamacpp/: run_server_default.sh  run_server_domains.sh  server_default_model.json  server_domain_models.json
infrastructure/llamacpp/servers/: download_defaults.py  download_domains.py  run_server_default.sh  run_server_domains.sh  run_server_voice.sh
infrastructure/ollama/: docker-compose-gpu.yml
infrastructure/presidio/: run_presidio.sh
projects/finetune_app/: Dockerfile  pyproject.toml
projects/finetune_worker1/: Dockerfile  pyproject.toml
projects/finetune_worker2/: Dockerfile  pyproject.toml
projects/talkie_app/: pyproject.toml  talkie_aio.sh  talkie_cli.sh
projects/vocei_app/: pyproject.toml  vocie_fastapp.sh  vocie_gradioapp.sh  vocie_solar.sh
resources/config/: llm_defaults.json  llm_libary.json  llm_locally_aio.json  llm_ollama_openai.json  llm_solar_openai.json  manual_download.py  reference_voices.json
test/: quicktest1.py
test/manual/: test_classify.py  test_cognitivechat.py  test_commands.py  test_contentguard.py  test_data_security.py  test_datasecurity.py  test_functionality.py  test_llm_aio.py  test_llm_multimodal.py  test_llmchat.py  test_systemcheck.py
workspace/: =0.13  config
workspace/samples/: grammar_sample.txt  simplechat_health.json  simplechat_sport_ml.json
(+61 files in other folders)
