[tool.poetry]
name = "finetune_app"
version = "0.1.0"
description = "finetune API"
authors = ["mychen76 <mychen76@gmail.com>"]
license = ""

packages = [
    {include = "pavai/finetune_api", from = "../../bases"},
    {include = "pavai/finetune", from = "../../components"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
pymongo = "^4.6.1"
uvicorn = "^0.26.0"
pika = "^1.3.2"
faker = "^22.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
