[tool.poetry]
name = "finetune_worker2"
version = "0.1.0"
description = "data processing worker"
authors = ["mychen76 <mychen76@gmail.com>"]
license = ""

packages = [
    {include = "pavai/finetune_api", from = "../../bases"},
    {include = "pavai/finetune", from = "../../components"}
]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^22.4.0"
pika = "^1.3.2"
fastapi = "^0.109.0"
pymongo = "^4.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
